--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
-    "mysql2": "^3.6.1"
+    "mysql2": "^3.6.1",
+    "nodemailer": "^6.9.5"
   }
 }
